@@ -4,7 +4,7 @@
   rbgobj_closure.c -
 
   $Author: sakai $
-  $Date: 2002/06/23 11:03:28 $
+  $Date: 2002/07/31 07:47:33 $
 
   Copyright (C) 2002  Masahiro Sakai
 
@@ -12,27 +12,7 @@
 
 #include "global.h"
 
-VALUE rbgobj_cClosure;
-
-#if 0
-static
-VALUE closure_invoke(argc, argv, self)
-    int argc;
-    VALUE* argvl
-    VALUE self;
-{
-    int i;
-    GValue* params = ALLOCA_N(GValue, argc);
-    memset(params, 0, sizeof(GValue) * argc);
-
-    for (i = 0; i < argc; i++)
-        rbgobj_rvalue_to_gvalue(argv[i], &params[i]);
-    
-    g_closure_invoke();
-}
-#endif
-
-/**********************************************************************/
+static id_call;
 
 typedef struct _GRClosure GRClosure;
 
@@ -40,6 +20,7 @@ struct _GRClosure
 {
     GClosure closure;
     VALUE callback;
+    VALUE extra_args;
 };
 
 void
@@ -51,50 +32,55 @@ rclosure_marshal(GClosure*      closure,
                  gpointer        marshal_data)
 {
     int i;
-    VALUE* params = ALLOCA_N(VALUE, n_param_values);
     VALUE ret;
+
+    VALUE args = rb_ary_new2(n_param_values);
     
     for (i = 0; i < n_param_values; i++)
-        params[i] = rbgobj_gvalue_to_rvalue(&param_values[i]);
+        rb_ary_store(args, i, rbgobj_gvalue_to_rvalue(&param_values[i]));
+    args = rb_ary_concat(args, ((GRClosure*)closure)->extra_args);
 
-    ret = rb_apply(((GRClosure*)closure)->callback,
-                   rb_intern("call"),
-                   rb_ary_new4(n_param_values, params));
+    ret = rb_apply(((GRClosure*)closure)->callback, id_call, args);
 
     if (return_value)
         rbgobj_rvalue_to_gvalue(ret, return_value);
 }
 
-static VALUE rclosure_list;
+static VALUE rclosure_marker_list;
 
 static void
-rclosure_remove(GClosure* closure, gpointer data)
+marker_remove(gpointer data, GClosure* closure)
 {
     VALUE obj = (VALUE)data;
-    rb_hash_aset(rclosure_list, obj, Qnil);
+    rb_hash_aset(rclosure_marker_list, obj, Qnil);
+    ((GRClosure*)closure)->callback   = Qnil;
+    ((GRClosure*)closure)->extra_args = Qnil;
 }
 
 static void
 rclosure_mark(GRClosure* closure)
 {
     rb_gc_mark(closure->callback);
+    rb_gc_mark(closure->extra_args);
 }
 
 GClosure*
-g_rclosure_new(VALUE callback_proc)
+g_rclosure_new(VALUE callback_proc, VALUE extra_args)
 {
     GRClosure* closure;
-    VALUE obj;
+    VALUE marker;
 
     closure = (GRClosure*)g_closure_new_simple(sizeof(GRClosure), NULL);
 
-    closure->callback = callback_proc;
+    closure->callback   = callback_proc;
+    closure->extra_args = extra_args;
+
     g_closure_set_marshal((GClosure*)closure, &rclosure_marshal);
 
-    obj = Data_Wrap_Struct(rbgobj_cClosure, &rclosure_mark, NULL, closure);
-    rb_hash_aset(rclosure_list, obj, callback_proc);
-    g_closure_add_finalize_notifier((GClosure*)closure, &rclosure_remove,
-                                    (gpointer)obj);
+    marker = Data_Wrap_Struct(rb_cData, rclosure_mark, NULL, closure);
+    rb_hash_aset(rclosure_marker_list, marker, Qtrue);
+    g_closure_add_invalidate_notifier((GClosure*)closure, (gpointer)marker,
+                                      &marker_remove);
 
     return (GClosure*)closure;
 }
@@ -102,16 +88,15 @@ g_rclosure_new(VALUE callback_proc)
 static void
 Init_rclosure()
 {
-    rb_global_variable(&rclosure_list);
-    rclosure_list = rb_hash_new();
+    rb_global_variable(&rclosure_marker_list);
+    rclosure_marker_list = rb_hash_new();
+
+    id_call = rb_intern("call");
 }
 
 /**********************************************************************/
 
 void Init_gobject_gclosure()
 {
-    rbgobj_cClosure = rb_define_class_under(mGLib, "Closure", rb_cData);
-    /* rb_define_method(rbgobj_cClosure, "call", &closure_invoke, -1); */
-
     Init_rclosure();
 }
